--- a/templates/employees/add_employee.html
+++ b/templates/employees/add_employee.html
@@ -32,7 +32,7 @@
                     <div class="row g-3 mb-4">
                         <div class="col-md-4">
                             <label class="form-label">Full Name <span class="text-danger">*</span></label>
-                            <input type="text" name="name" class="form-control" placeholder="e.g. Rahul Sharma" required>
+                            <input type="text" name="name" class="form-control" placeholder="e.g. Elone Musk" required>
                         </div>
                         <div class="col-md-4">
                             <label class="form-label">Email</label>
@@ -103,9 +103,11 @@
                     </div>
                     <div class="row g-3 mb-4">
                         <div class="col-md-6">
+                            <label class="form-label">Address Line 1</label>
                             <input type="text" name="address_line1" class="form-control" placeholder="House No, Building Name">
                         </div>
                         <div class="col-md-6">
+                            <label class="form-label">Address Line 2</label>
                             <input type="text" name="address_line2" class="form-control" placeholder="Street, Area, Landmark">
                         </div>
                     </div>
